update App.js, app.css fix overflow issue

--- a/src/App.css
+++ b/src/App.css
@@ -27,13 +27,16 @@ h3 {
 footer {
   position: absolute;
   bottom: 0;
+  width: 100%;
+}
+
+.footer-content {
   padding: 20px;
   display: flex;
-  width: 100vw;
   justify-content: space-between;
 }
 
-footer > a {
+.footer-content > a {
   font-size: 1.3rem;
   color: white;
   display: inline-block;
@@ -41,7 +44,7 @@ footer > a {
   transition: transform 250ms ease-in-out;
 }
 
-footer > a:hover {
+.footer-content > a:hover {
   transform: scale(1.04);
   transition: transform 250ms ease-in-out;
   text-decoration: underline;
@@ -59,10 +62,12 @@ footer > a:hover {
 
 #navbar {
   position: fixed;
-  top: 0;
-  padding: 20px;
   background-color: blue;
   width: 100%;
+  height: 60px;
+  padding: 20px;
+  display: flex;
+  z-index: 9999;
 }
 
 .navbar-list {
